--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Xingyu Qu"
   avatar           : "../images/Icon.png"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "United Arab Emirates"
+  location         : "Abu Dhabi, United Arab Emirates"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=mFmoJAMAAAAJ&hl=en"
